Able to query metadata from TableInputDialog